[gd_scene load_steps=4 format=2]

[ext_resource path="res://Content/Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Content/Font/Pixel_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Content/Font/Start Menu.tres" type="Theme" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.333333, 0.360784, 0.482353 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 387.0
margin_top = 216.0
margin_right = 637.0
margin_bottom = 384.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 250.0
margin_bottom = 39.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 250.0
margin_bottom = 78.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Resume Game"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 250.0
margin_bottom = 84.0

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 250.0
margin_bottom = 123.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 250.0
margin_bottom = 129.0

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 250.0
margin_bottom = 168.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Options" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -69.0
margin_right = 112.5
margin_bottom = 69.0
custom_constants/separation = 15

[node name="Video" type="Button" parent="Options/VBoxContainer"]
margin_right = 225.0
margin_bottom = 33.0
text = "Video"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
margin_top = 48.0
margin_right = 225.0
margin_bottom = 81.0
text = "Audio"

[node name="BackFromOptions" type="Button" parent="Options"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
text = "Back"

[node name="Video" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -62.0
margin_right = 144.0
margin_bottom = 60.0

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_right = 254.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
margin_right = 254.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
margin_top = 42.0
margin_right = 254.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
margin_top = 84.0
margin_right = 254.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "vsync"

[node name="Checkboxes" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_left = 258.0
margin_right = 288.0
margin_bottom = 122.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 3
theme = ExtResource( 3 )

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checkboxes"]
margin_right = 30.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
icon_align = 1

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checkboxes"]
margin_top = 42.0
margin_right = 30.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
icon_align = 1

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checkboxes"]
margin_top = 84.0
margin_right = 30.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
icon_align = 1

[node name="BackFromVideo" type="Button" parent="Video"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
text = "Back"

[node name="Audio" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -53.5
margin_right = 179.0
margin_bottom = 53.5

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_right = 174.0
margin_bottom = 107.0
size_flags_horizontal = 3

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_right = 174.0
margin_bottom = 33.0
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 37.0
margin_right = 174.0
margin_bottom = 70.0
text = "Music"

[node name="SoundFX" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 74.0
margin_right = 174.0
margin_bottom = 107.0
text = "Sound FX"

[node name="Sliders" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_left = 178.0
margin_right = 358.0
margin_bottom = 107.0
rect_min_size = Vector2( 180, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
margin_right = 180.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
step = 10.0
value = 50.0

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
margin_top = 37.0
margin_right = 180.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
step = 10.0
value = 50.0

[node name="SoundFX" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
margin_top = 74.0
margin_right = 180.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
step = 10.0
value = 50.0

[node name="BackFromAudio" type="Button" parent="Audio"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Options/BackFromOptions" to="." method="_on_BackFromOptions_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checkboxes/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checkboxes/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checkboxes/VSync" to="." method="_on_VSync_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_BackFromVideo_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/SoundFX" to="." method="_on_SoundFX_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_BackFromAudio_pressed"]
